Fix spacing on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,14 @@ li {
 /* Mobile */
 
 @media (max-width: 400px) {
+  body {
+    margin-top: 10px;
+  }
+
+  hr {
+    margin: 0;
+  }
+
   h1 {
     font-size: 48px;
   }
